z-index for manga reader fix. fixed iframe.

--- a/app/components/Reader.scss
+++ b/app/components/Reader.scss
@@ -34,6 +34,7 @@
     width: 64px;
     border-radius: 1000000px;
     box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.7);  
+    z-index: 3;
     .rightarrow{
       cursor: pointer;
       height: 100%;
@@ -50,7 +51,8 @@
     height: 64px;
     width: 64px;
     border-radius: 1000000px;
-    box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.7);  
+    box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.7);
+    z-index: 3;  
     .leftarrow{
       cursor: pointer;
       height: 100%;
